--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,16 +1,56 @@
-html,
-body {
-  padding: 0;
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --white: #ffffff;
+  --white-light: #EEEEEE;
+
+  --gray-50: #313134;
+  --gray-100: #e1e1e6;
+  --gray-300: #a8a8b3;
+  --gray-700: #323238;
+  --gray-800: #29292e;
+  --gray-850: #1f2729;
+  --gray-900: #202023;
+
+  --cyan-500: #61dafd;
+}
+
+@media (max-width: 1080px) {
+  html {
+      font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+      font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--gray-900);
+  color: var(--white);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Montserrat", sans-serif;
+}
+
+h1 { font-size: 45px;}
+
+button {
+  cursor: pointer;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
