--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,56 @@
-.main{
-  display: flex;
-  border:1px solid red;
-  align-items: center;
-  justify-content: center;
+.container {
+  padding-top: 20px;
 }
 
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  ul {
+    list-style-type: none;
+    max-width: 650px;
+    margin-top: 30px;
+  }
+
+  p, h2{
+    margin-top: 5px;
+  }
+
+  li {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ffffff50;
+  }
+
+  li + li {
+    margin-top: 20px;
+  }
+
+  img {
+    border-radius: 100px;
+  }
+
+  a {
+    transition: color 0.2s;
+  }
+  a:hover{
+    color: #ffffff90;
+  }
+}
+
+.infoWrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  height: 40px;
+
+  label:nth-of-type(1) {
+    margin-left: 10px;
+    font-weight: bold;
+  }
+
+  label:last-child {
+    margin-left: auto;
+  }
+}
